# cobransaas-assessoria-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/cobransaas_mcp/: __init__.py  __main__.py  server.py
src/cobransaas_mcp/api/: __init__.py  acordos_api.py  boletos_api.py  client.py  clientes_api.py  comissoes_api.py  contratos_api.py  global_api.py  lotes_api.py  negociacoes_api.py  parcelas_api.py  pix_api.py  propostas_api.py  tabulacoes_api.py
src/cobransaas_mcp/config/: settings.py
src/cobransaas_mcp/models/: __init__.py
src/cobransaas_mcp/tools/: __init__.py
tests/: __init__.py
