[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobransaas-mcp"
version = "0.1.0"
description = "MCP Server para APIs de Assessorias do CobranSaaS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Marcos Gabbardo" }
]
keywords = ["mcp", "cobransaas", "assessoria", "cobranca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
cobransaas-mcp = "cobransaas_mcp.server:main"

[project.urls]
Homepage = "https://github.com/marcosgabbardo/cobransaas-assessoria-mcp-server"
Repository = "https://github.com/marcosgabbardo/cobransaas-assessoria-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/cobransaas_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
